@@ -2,8 +2,8 @@ Encoding: UTF-8
 Package: fSRM
 Type: Package
 Title: Social Relations Analyses with Roles ("Family SRM")
-Version: 0.6.4
-Date: 2016-01-22
+Version: 0.6.5
+Date: 2016-11-14
 Author: Felix Schönbrodt, Lara Stas, Tom Loeys
 Maintainer: Felix Schönbrodt <felix@nicebread.de>
 Description: Social Relations Analysis with roles ("Family SRM") are computed,
